# conest

./: .gitignore  .metadata  Cargo.toml  DONE.md  PLAN.md  PLAN.md.old  PLAN160426upgrade.md  README.md  RELEASE_NOTES_v0.1.0.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/dev/conest/conest/: ConestBackgroundService.kt  MainActivity.kt
lib/: main.dart
lib/src/: build_info.dart  conest_theme.dart  local_relay_node.dart  messenger_controller.dart  models.dart  platform_bridge.dart  qr_scan_screen.dart  relay_client.dart  storage.dart  update_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
native/conest_core/: Cargo.toml
native/conest_core/src/: lib.rs
native/conest_relay/: Cargo.toml
native/conest_relay/src/: main.rs
native/conest_updater/: Cargo.toml
native/conest_updater/src/: main.rs
test/: conest_theme_test.dart  invite_codec_test.dart  messenger_controller_test.dart  relay_client_test.dart  update_service_test.dart
tool/: release_manifest.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
