[package]
name = "conest_core"
version = "0.2.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
